kubernetes/addons/storage/longhorn/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://longhorn.default.internal.javiersant.com"
    gethomepage.dev/description: Longhorn Dashboard
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: longhorn.svg
    gethomepage.dev/name: Longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
  tls:
    secretName: wildcard-javiersant-com-tls
